INCLUDE_DIRECTORIES(../include)
	
ADD_LIBRARY(AddWordTool SHARED AddWordTool.cpp)
ADD_LIBRARY(DatabaseImpl SHARED DatabaseImpl.cpp)
ADD_LIBRARY(ExamTool SHARED ExamTool.cpp)
ADD_LIBRARY(GetExamStrategyByRandom SHARED GetExamStrategyByRandom.cpp)
ADD_LIBRARY(Interactor SHARED Interactor.cpp)
ADD_LIBRARY(MemoryStrategyByMemoryCurve SHARED MemoryStrategyByMemoryCurve.cpp)
ADD_LIBRARY(MemoryStrategyByMemoryCurveStorage SHARED MemoryStrategyByMemoryCurveStorage.cpp)
ADD_LIBRARY(MyException SHARED MyException.cpp)
ADD_LIBRARY(NewWordCountTool SHARED NewWordCountTool.cpp)
ADD_LIBRARY(OperateFileStrategyImpl SHARED OperateFileStrategyImpl.cpp)
ADD_LIBRARY(SearchWordTool SHARED SearchWordTool.cpp)
ADD_LIBRARY(StartPage SHARED StartPage.cpp)
ADD_LIBRARY(User SHARED User.cpp)
ADD_LIBRARY(UserImpl SHARED UserImpl.cpp)
TARGET_LINK_LIBRARIES(UserImpl User)
ADD_LIBRARY(UsernameReader SHARED UsernameReader.cpp)
ADD_LIBRARY(UserWord SHARED UserWord.cpp)
ADD_LIBRARY(UserWordImpl SHARED UserWordImpl.cpp)
TARGET_LINK_LIBRARIES(UserWordImpl UserWord)
ADD_LIBRARY(Viewer SHARED Viewer.cpp)
ADD_LIBRARY(ViewerDisplayerImpl SHARED ViewerDisplayerImpl.cpp)
ADD_LIBRARY(ViewerImpl SHARED ViewerImpl.cpp)
ADD_LIBRARY(WordImpl SHARED WordImpl.cpp)
ADD_LIBRARY(WordPickerStrategyByMemoryCurve SHARED WordPickerStrategyByMemoryCurve.cpp)
ADD_LIBRARY(WordReciteTool SHARED WordReciteTool.cpp)

SET(LIB_LIST AddWordTool DatabaseImpl ExamTool GetExamStrategyByRandom Interactor MemoryStrategyByMemoryCurve MemoryStrategyByMemoryCurveStorage MyException NewWordCountTool OperateFileStrategyImpl SearchWordTool StartPage User UserImpl UsernameReader UserWord UserWordImpl Viewer ViewerDisplayerImpl ViewerImpl WordImpl WordPickerStrategyByMemoryCurve WordReciteTool)
SET_TARGET_PROPERTIES(${LIB_LIST} PROPERTIES VERSION 1.O SOVERSION 1.0)

